# cuttix

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LEGAL_DISCLAIMER.md  LICENSE  Makefile  README.md  __init__.py  __main__.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: oui.csv  top_ports.json
cli/: main.py
cuttix/: __init__.py  __main__.py  config.py
cuttix/cli/: main.py
cuttix/core/: audit_log.py  event_bus.py  exceptions.py  interfaces.py  privilege.py
cuttix/db/: database.py  schema.sql
cuttix/gui/: __init__.py  app.py  bandwidth.py  main_window.py  state.py  style.py  themes.py
cuttix/gui/widgets/: __init__.py  alert_feed.py  bandwidth_chart.py  control_panel.py  dashboard.py  host_table.py  network_map.py  packet_viewer.py
cuttix/gui/workers/: __init__.py  capture_worker.py  scan_worker.py  watch_worker.py
cuttix/models/: __init__.py  alert.py  host.py  packet.py  scan_result.py
cuttix/modules/: __init__.py  arp_control.py  arp_state.py  ids.py  packet_capture.py  port_scanner.py  report.py  scanner.py
cuttix/utils/: logger.py  mac_vendor.py  network.py  validators.py
db/: database.py
models/: scan_result.py
modules/: __init__.py
scripts/: cuttix.spec
tests/: conftest.py
tests/integration/: test_scan_to_cut.py  test_scan_to_ids.py
tests/unit/: test_arp_control.py  test_arp_state.py  test_audit_log.py  test_bandwidth.py  test_database.py  test_event_bus.py  test_gui_workers.py  test_ids.py  test_mac_vendor.py  test_packet_capture.py  test_port_scanner.py  test_report.py  test_scanner.py  test_state_store.py  test_themes.py  test_validators.py
utils/: logger.py
