[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuttix"
version = "0.1.0"
description = "LAN administration and audit toolkit"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.10"
authors = [{name = "Denis"}]
keywords = ["network", "security", "arp", "scanner", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "scapy>=2.5.0",
    "click>=8.1.0",
    "dpkt>=1.9.8",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5.0", "pyqtgraph>=0.13.0"]
capture = ["pypcap>=1.3.0"]
pdf = ["reportlab>=4.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "hypothesis>=6.80.0",
]
all = ["cuttix[gui,capture,pdf,dev]"]

[project.scripts]
cuttix = "cuttix.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = ["S101", "S603", "S607"]  # allow assert in tests, subprocess calls

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "lab: requires lab network setup",
]

[tool.coverage.run]
source = ["cuttix"]
omit = ["cuttix/gui/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
