[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuttix"
version = "1.0.0"
description = "LAN administration and audit toolkit — scan, control, capture, detect."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.10"
authors = [{ name = "Denis", email = "denis@users.noreply.github.com" }]
maintainers = [{ name = "Denis" }]
keywords = [
    "network", "security", "arp", "scanner", "audit",
    "ids", "packet-capture", "lan",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Security",
]

dependencies = [
    "scapy>=2.5.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.5.0"]
capture = ["dpkt>=1.9.8"]
pdf = ["reportlab>=4.0.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "bandit>=1.7.0",
    "hypothesis>=6.80.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
release = ["pyinstaller>=6.0.0"]
all = ["cuttix[gui,capture,pdf]"]

[project.urls]
Homepage = "https://github.com/bouh-d/cuttix"
Repository = "https://github.com/bouh-d/cuttix"
Issues = "https://github.com/bouh-d/cuttix/issues"
Changelog = "https://github.com/bouh-d/cuttix/blob/main/CHANGELOG.md"

[project.scripts]
cuttix = "cuttix.cli.main:cli"

[project.gui-scripts]
cuttix-gui = "cuttix.gui:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["cuttix*"]
exclude = ["tests*", "docs*", "scripts*"]

[tool.setuptools.package-data]
cuttix = ["../assets/*.csv", "../assets/*.json"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "SIM"]
ignore = [
    "S101",   # asserts are fine in tests
    "S603",   # subprocess calls are checked case-by-case
    "S607",   # "partial path" — our CLI wrappers are intentional
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106", "N802"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow",
    "lab: requires lab network setup",
]

[tool.coverage.run]
source = ["cuttix"]
omit = [
    "cuttix/gui/widgets/*",
    "cuttix/gui/main_window.py",
    "cuttix/gui/app.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
